# parallel-fft

./: .gitignore  README.md  report_so_far.md
cpp/: CMakeLists.txt  README.md  main  main.cpp  original  original_from_rosetta_code.cpp  reading_input.cpp  reading_input.h
cpp/src/: fft.cpp  main.cpp  utils.cpp
cpp/src/include/: fft.h  utils.h
cpp/tests/: perf.cpp  unit.cpp
erlang/: Dockerfile  README.md  start.sh
erlang/app/: complex.erl  fft.erl  main.erl  utils.erl
test_data/: expected_output1  expected_output10  expected_output11  expected_output12  expected_output13  expected_output14  expected_output15  expected_output16  expected_output2  expected_output3  expected_output4  expected_output5  expected_output6  expected_output7  expected_output8  expected_output9  input10  input11  input12  input13  input14  input15  input16  input2  input3  input4  input5  input6  input7  input8  input9
tests/: expected_output1  expected_output2  expected_output3  expected_output4  input3  input4
tests_data/: expected_output10  expected_output4  expected_output6  input11  input4  input6  input8
